# backup-files-quad

./: README
airborne/firmwares/rotorcraft/guidance/: guidance_h.c  guidance_h.h  guidance_v.c
airborne/modules/hs_module/: Makefile  hs071_c.c  hs071_c.h
airborne/modules/opt_trajectory_module/: optimal_trajectory.c
airborne/modules/quad_ipopt/: quadFunctions.cpp
airborne2/firmwares/rotorcraft/: autopilot.h
airborne2/firmwares/rotorcraft/guidance/: guidance_h.c  guidance_v.c
airborne2/modules/ipopt_test/: TutorialC.c
airborne2/modules/opt_trajectory_module/: optimal_trajectory.c
airborne2/modules/quad_ipopt/: CMakeLists.txt  quadNLP.h
airborneWorking/firmwares/rotorcraft/guidance/: guidance_h.c  guidance_v.h
airborneWorking/modules/ipopt_test/: TutorialC.h
airborneWorking/modules/opt_trajectory_module/: optimal_trajectory.c  optimal_trajectory.h
airborneWorking/modules/quad_ipopt/: quadFunctions.h  quadNLPmain.cpp
conf/: maps.xml
conf/airframes/: jsbsim.xml  jsbsim.xml~
conf/airframes/examples/: quadrotor_lisa_m_2_pwm_spektrum.xml
conf/maps_data/: maps.google.com
conf/modules/: opt_trajectory_module.xml
conf2/: %gconf.xml
conf2/airframes/examples/: microjet.xml~
conf2/modules/: hs_module.xml
conf2/settings/: rotorcraft_basic.xml~
confWorking/airframes/examples/: bixler_lisa_m_2.xml  microjet.xml  quadrotor_lisa_m_2_pwm_spektrum.xml~
confWorking/flight_plans/: rotorcraft_basic.xml~
confWorking/modules/: opt_trajectory_module.xml  quad_ipopt.xml
final/airborne/firmwares/rotorcraft/: autopilot.c  autopilot.h
final/airborne/firmwares/rotorcraft/guidance/: guidance_h.c  guidance_h.h  guidance_v.c  guidance_v.h
final/airborne/modules/opt_trajectory_module/: optimal_trajectory.c  optimal_trajectory.h
final/airborne/modules/quad_ipopt/: quadNLP.cpp
final/conf/: conf.xml
final/conf/airframes/examples/: bixler_lisa_m_2.xml~  quadrotor_lisa_m_2_pwm_spektrum.xml  quadrotor_lisa_m_2_pwm_spektrum.xml~
final/conf/flight_plans/: rotorcraft_IPOPT.xml  rotorcraft_IPOPT.xml~  rotorcraft_basic.xml  rotorcraft_basic.xml~
final/conf/modules/: ipopt_test.xml  opt_trajectory_module.xml
